--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,101 +1,208 @@
-<mat-nav-list>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+<div class="list-group">
+  <!-- dashboard -->
+  <a
+    routerLink="/dashboard"
+    routerLinkActive="list-item-active"
+    class="list-group-item list-group-item-action d-flex"
+    aria-current="true"
+  >
     <mat-icon>dashboard</mat-icon>
-    <div class="px-2">{{ 'home' | translate }}</div>
+    {{ 'home' | translate }}
   </a>
 
-  <mat-expansion-panel
-    hideToggle
-    (opened)="panelOpenState = true"
-    (closed)="panelOpenState = false"
-  >
-    <mat-expansion-panel-header>
-      <a mat-list-item>
-        <mat-icon>people</mat-icon>
-        <div class="px-2">{{ 'user.user-manage' | translate }}</div>
+  <!-- user manage -->
+  <div class="accordion m-0">
+    <div
+      class="d-flex accordion-button list-group-item collapsed"
+      data-bs-toggle="collapse"
+      data-bs-target="#userManage"
+      aria-controls="userManage"
+    >
+      <mat-icon>people</mat-icon>
+      {{ 'user.user-manage' | translate }}
+    </div>
+
+    <div id="userManage" class="accordion-collapse collapse">
+      <a
+        routerLink="/employee"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action"
+        style="background-color: black;"
+      >
+        {{ 'user.employee' | translate }}
       </a>
-    </mat-expansion-panel-header>
-
-    <a mat-list-item routerLink="/employee" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'user.employee' | translate }}</div>
-    </a>
-    <a mat-list-item routerLink="/customer" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'user.customer' | translate }}</div>
-    </a>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel
-    hideToggle
-    (opened)="panelOpenState = true"
-    (closed)="panelOpenState = false"
-  >
-    <mat-expansion-panel-header>
-      <a mat-list-item routerLinkActive="list-item-active">
-        <mat-icon>settings</mat-icon>
-        <div class="px-2">
-          {{ 'product.product-configuration' | translate }}
-        </div>
+      <a
+        routerLink="/customer"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action"
+        style="background-color: black;"
+      >
+        {{ 'user.customer' | translate }}
       </a>
-    </mat-expansion-panel-header>
+    </div>
+  </div>
 
-    <a mat-list-item routerLink="/ram" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'product.ram' | translate }}</div>
-    </a>
-    <a mat-list-item routerLink="/rom" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'product.rom' | translate }}</div>
-    </a>
-    <a mat-list-item routerLink="/color" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'product.color' | translate }}</div>
-    </a>
-  </mat-expansion-panel>
+  <!-- prouct configuration manage -->
+  <div class="accordion m-0">
+    <div
+      class="d-flex accordion-button list-group-item collapsed"
+      data-bs-toggle="collapse"
+      data-bs-target="#configuration"
+      aria-controls="configuration"
+    >
+      <mat-icon>settings</mat-icon>
+      {{ 'product.product' | translate }}
+    </div>
 
-  <mat-expansion-panel
-    hideToggle
-    (opened)="panelOpenState = true"
-    (closed)="panelOpenState = false"
-  >
-    <mat-expansion-panel-header>
-      <a mat-list-item>
-        <mat-icon>phone_iphone</mat-icon>
-        <div class="px-2">{{ 'product.product' | translate }}</div>
+    <div id="configuration" class="accordion-collapse collapse">
+      <a
+        routerLink="/ram"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'product.ram' | translate }}
       </a>
-    </mat-expansion-panel-header>
+      <a
+        routerLink="/rom"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'product.rom' | translate }}
+      </a>
+      <a
+        routerLink="/color"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'product.color' | translate }}
+      </a>
+    </div>
+  </div>
 
-    <a mat-list-item routerLink="/brands" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'brands' | translate }}</div>
-    </a>
-    <a mat-list-item routerLink="/product" routerLinkActive="list-item-active">
-      <div class="px-2">{{ 'product.product' | translate }}</div>
-    </a>
-  </mat-expansion-panel>
+  <!-- prouct manage -->
+  <div class="accordion m-0">
+    <div
+      class="d-flex accordion-button list-group-item collapsed"
+      data-bs-toggle="collapse"
+      data-bs-target="#product"
+      aria-controls="product"
+    >
+      <mat-icon>phone_iphone</mat-icon>
+      {{ 'product.product-configuration' | translate }}
+    </div>
 
-  <a mat-list-item routerLink="/warehouse" routerLinkActive="list-item-active">
-    <mat-icon>home</mat-icon>
-    <div class="px-2">{{ 'warehouse.warehouse' | translate }}</div>
-  </a>
+    <div id="product" class="accordion-collapse collapse">
+      <a
+        routerLink="/brands"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'brands' | translate }}
+      </a>
+      <a
+        routerLink="/product"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'product.product' | translate }}
+      </a>
+    </div>
+  </div>
 
-  <a mat-list-item routerLink="/supplier" routerLinkActive="list-item-active">
+  <!-- warehouse manage -->
+  <div class="accordion m-0">
+    <div
+      class="d-flex accordion-button list-group-item collapsed"
+      data-bs-toggle="collapse"
+      data-bs-target="#warehouse"
+      aria-controls="warehouse"
+    >
+      <mat-icon>home</mat-icon>
+      {{ 'warehouse.warehouse' | translate }}
+    </div>
+
+    <div id="warehouse" class="accordion-collapse collapse">
+      <a
+        routerLink="/receipt/add"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'warehouse.create-receipt-note' | translate }}
+      </a>
+      <a
+        routerLink="/receipts"
+        routerLinkActive="list-item-active"
+        class="list-group-item list-group-item-action px-5"
+        style="background-color: black;"
+      >
+        {{ 'warehouse.list-receipt-note' | translate }}
+      </a>
+    </div>
+  </div>
+
+  <!-- supplier manage -->
+  <a
+    routerLink="/supplier"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
     <mat-icon>work_outline</mat-icon>
-    <div class="px-2">{{ 'user.supplier' | translate }}</div>
+    {{ 'user.supplier' | translate }}
   </a>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+
+  <!-- order manage -->
+  <a
+    routerLink="/order"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
     <mat-icon>shop_two</mat-icon>
-    <div class="px-2">{{ 'order.order' | translate }}</div>
+    <div>{{ 'order.order' | translate }}</div>
   </a>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
-    <mat-icon>image</mat-icon>
-    <div class="px-2">{{ 'banner' | translate }}</div>
-  </a>
-  <a mat-list-item routerLink="/coupons" routerLinkActive="list-item-active">
+
+  <!-- coupons manage -->
+  <a
+    routerLink="/coupons"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
     <mat-icon>card_giftcard</mat-icon>
-    <div class="px-2">{{ 'order.discount-code' | translate }}</div>
+    <div>{{ 'order.discount-code' | translate }}</div>
   </a>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+
+  <!-- banner manage -->
+  <a
+    routerLink="/banner"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
+    <mat-icon>image</mat-icon>
+    <div>{{ 'banner' | translate }}</div>
+  </a>
+
+  <!-- notification manage -->
+  <a
+    routerLink="/notification"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
     <mat-icon>notifications_none</mat-icon>
-    <div class="px-2">{{ 'notification.message-to-customer' | translate }}</div>
+    <div>{{ 'notification.message-to-customer' | translate }}</div>
   </a>
-  <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+
+  <!-- shop information -->
+  <a
+    routerLink="/shopInfo"
+    routerLinkActive="list-item-active"
+    class="d-flex list-group-item list-group-item-action"
+  >
     <mat-icon>store</mat-icon>
-    <div class="px-2">{{ 'shop-info' | translate }}</div>
+    <div>{{ 'shop-info' | translate }}</div>
   </a>
-</mat-nav-list>
+</div>
